# q2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
crates/comrak-to-pandoc/: Cargo.toml
crates/comrak-to-pandoc/src/: block.rs  compare.rs  inline.rs  lib.rs  normalize.rs  source_location.rs  text.rs
crates/comrak-to-pandoc/tests/: debug.rs  debug_comrak.rs  differential.rs  generators.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
crates/pampa/: CLAUDE.md  Cargo.toml  README.md
crates/pampa/docs/: template-variables.md
crates/pampa/error-message-macros/: Cargo.toml
crates/pampa/fuzz/: Cargo.toml
crates/pampa/scripts/: analyze_error_coverage.ts  build_error_table.ts  migrate_error_corpus.ts
crates/pampa/src/: citeproc_filter.rs  errors.rs  filter_context.rs  filters.rs  json_filter.rs  lib.rs  main.rs  options.rs  toc.rs  unified_filter.rs
crates/pampa/test-fixtures/: blockquote-complex.qmd  blockquote-simple.qmd
crates/pampa/tests/: diagnostic_yaml_tags.rs  error_node_analysis.rs  incremental_writer_investigation.rs  incremental_writer_tests.rs  inline_span_investigation.rs  inline_splice_integration_tests.rs  inline_splice_property_tests.rs  inline_splice_safety_tests.rs  json_location_test.rs  json_reader_smoke_tests.rs  table-para.qmd  table-two-paras.qmd  test.rs  test_ansi_writer.rs  test_attr_source_parsing.rs  test_attr_source_structure.rs  test_citeproc_integration.rs  test_code_block_attributes.rs  test_code_span.rs  test_editorial_mark_spacing.rs  test_error_corpus.rs  test_hard_soft_break.rs  test_html_attr_handling.rs  test_inline_locations.rs  test_json_div_transforms.rs  test_json_errors.rs  test_json_roundtrip.rs  test_location_health.rs  test_lua_constructors.rs  test_lua_list.rs  test_lua_utils.rs  test_math_attr.rs  test_meta.rs  test_metadata_source_tracking.rs  test_nested_yaml_serialization.rs  test_ordered_list_formatting.rs  test_rawblock_to_config_value.rs  test_section_divs.rs  test_shortcode.rs  test_template_integration.rs  (+8 more)
crates/pico-quarto-render/: Cargo.toml  README.md
crates/pico-quarto-render/src/: embedded_resolver.rs  format_writers.rs  main.rs  template_context.rs
crates/pico-quarto-render/tests/: end_to_end.rs
crates/qmd-syntax-helper/: Cargo.toml  README.md
crates/qmd-syntax-helper/src/: lib.rs  main.rs  main_old.rs  rule.rs
crates/qmd-syntax-helper/tests/: apostrophe_quotes_test.rs  attribute_ordering_test.rs  div_whitespace_test.rs  grid_tables_test.rs  q_2_11_test.rs  q_2_12_test.rs  q_2_13_test.rs  q_2_14_test.rs  q_2_15_test.rs  q_2_16_test.rs  q_2_17_test.rs  q_2_18_test.rs  q_2_19_test.rs  q_2_20_test.rs  q_2_21_test.rs  q_2_22_test.rs  q_2_23_test.rs  q_2_24_test.rs  q_2_25_test.rs  q_2_26_test.rs  q_2_28_test.rs  q_2_5_test.rs
crates/quarto/: Cargo.toml
crates/quarto-analysis/: Cargo.toml
crates/quarto-analysis/src/: context.rs  lib.rs
crates/quarto-ast-reconcile/: Cargo.toml
crates/quarto-ast-reconcile/src/: apply.rs  compute.rs  generators.rs  hash.rs  lib.rs  types.rs
crates/quarto-citeproc/: Cargo.toml  build.rs
crates/quarto-citeproc/src/: disambiguation.rs  error.rs  eval.rs  lib.rs  locale.rs  locale_parser.rs  output.rs  reference.rs  types.rs
crates/quarto-citeproc/tests/: csl_conformance.rs  deferred_tests.txt  enabled_tests.txt  error_tests.rs
crates/quarto-config/: Cargo.toml
crates/quarto-config/src/: convert.rs  lib.rs  materialize.rs  merged.rs  tag.rs  types.rs
crates/quarto-core/: Cargo.toml
crates/quarto-core/resources/: styles.css
crates/quarto-core/src/: artifact.rs  error.rs  format.rs  html_writer.rs  lib.rs  pipeline.rs  project.rs  render.rs  resources.rs  template.rs  transform.rs
crates/quarto-core/tests/: jupyter_integration.rs
crates/quarto-csl/: Cargo.toml
crates/quarto-csl/src/: error.rs  lib.rs  parser.rs  types.rs
crates/quarto-csl/tests/: error_tests.rs  integration.rs
crates/quarto-doctemplate/: Cargo.toml
crates/quarto-doctemplate/src/: ast.rs  context.rs  doc.rs  error.rs  eval_context.rs  evaluator.rs  lib.rs  parser.rs  resolver.rs
crates/quarto-doctemplate/test-fixtures/: conditional.template  forloop.template  main.template  simple.template  with-partial.template
crates/quarto-doctemplate/tests/: integration_tests.rs  pandoc_equiv_tests.rs
crates/quarto-error-reporting/: CONTRIBUTING-ERRORS.md  Cargo.toml  README.md  error_catalog.json
crates/quarto-error-reporting/examples/: basic_error.rs  builder_api.rs  custom_rendering.rs  diagnostic_collector.rs  migration_helpers.rs  with_error_code.rs  with_location.rs
crates/quarto-error-reporting/src/: builder.rs  catalog.rs  diagnostic.rs  lib.rs  macros.rs
crates/quarto-hub/: Cargo.toml
crates/quarto-hub/src/: automerge_api_tests.rs  context.rs  discovery.rs  error.rs  index.rs  lib.rs  main.rs  peer.rs  resource.rs  server.rs  storage.rs  sync.rs  sync_state.rs  watch.rs
crates/quarto-lsp/: Cargo.toml
crates/quarto-lsp-core/: Cargo.toml
crates/quarto-lsp-core/src/: analysis.rs  diagnostics.rs  document.rs  lib.rs  symbols.rs  types.rs
crates/quarto-lsp/src/: capabilities.rs  convert.rs  lib.rs  server.rs
crates/quarto-lsp/tests/: integration_test.rs
crates/quarto-markdown-pandoc/: .gitignore  CLAUDE.md  Cargo.toml
crates/quarto-markdown-pandoc/error-message-macros/: Cargo.toml
crates/quarto-markdown-pandoc/scripts/: build_error_table.ts  rebuild.sh
crates/quarto-pandoc-types/: Cargo.toml
crates/quarto-parse-errors/: Cargo.toml  README.md
crates/quarto-project-create/: Cargo.toml
crates/quarto-sass/: Cargo.toml
crates/quarto-system-runtime/: Cargo.toml
crates/quarto-xml/: Cargo.toml  README.md
crates/quarto-yaml/: Cargo.toml  README.md
crates/tree-sitter-doctemplate/: Cargo.toml  build.rs
crates/wasm-quarto-hub-client/: Cargo.toml  README.md  build.rs
crates/xtask/: Cargo.toml
private-crates/quarto-core/: Cargo.toml
private-crates/quarto-yaml-validation/: Cargo.toml  JSON-OUTPUT-SCHEMA.md  README.md  SCHEMA-FROM-YAML.md  YAML-1.2-REQUIREMENT.md
(+3853 files in other folders)
