[workspace]
members = [
    "crates/*",
    "crates/experiments/reconcile-viewer",
    "crates/pampa/fuzz",
]
# WASM crates cannot be compiled on native platforms as part of the default workspace
# because they pull in dependencies (like V8 via deno_core) that are incompatible with
# native shared libraries. Build them explicitly with wasm-pack or --target wasm32-unknown-unknown.
# crates/experiments is a container directory, not a crate, so we exclude it from crates/* matching.
exclude = ["crates/wasm-quarto-hub-client", "crates/wasm-qmd-parser", "crates/experiments"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Posit Software, PBC"]
homepage = "https://github.com/posit-dev/quarto-markdown-syntax"
keywords = ["parser"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/posit-dev/quarto-markdown-syntax"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.89"
quick-xml = "0.37"
ariadne = "0.4"
clap = { version = "4.5", features = ["derive", "cargo"] }
insta = "1.40.0"
memchr = "2.7.4"
once_cell = "1.19"
proc-macro2 = "1.0.94"
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9"
thiserror = "1.0"
toml = "0.8.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml-rust2 = "0.10"
async-trait = "0.1"
tokio-util = "0.7"
pollster = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# JavaScript runtime (native only, for EJS template rendering)
# Note: deno_core version must match what deno_web depends on
deno_core = "0.376"
deno_web = "0.257"
deno_webidl = "0.226"
serde_v8 = "0.285"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[workspace.dependencies.proc-macro-error2]
version = "2.0.1"
default-features = false

[workspace.dependencies.tests_macros]
path = "./crates/tests_macros"

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["std"]
default-features = false

[workspace.dependencies.tree-sitter]
version = "0.25.8"

[workspace.dependencies.tree-sitter-qmd]
path = "./crates/tree-sitter-qmd"

[workspace.dependencies.tree-sitter-sexpr]
path = "./crates/tree-sitter-sexpr"

[workspace.dependencies.wasm-qmd-parser]
path = "./crates/wasm-qmd-parser"

[workspace.dependencies.pampa]
path = "./crates/pampa"
default-features = false

[workspace.dependencies.quarto-core]
path = "./crates/quarto-core"

[workspace.dependencies.quarto-util]
path = "./crates/quarto-util"

[workspace.dependencies.quarto-yaml]
path = "./crates/quarto-yaml"

[workspace.dependencies.quarto-yaml-validation]
path = "./crates/quarto-yaml-validation"

[workspace.dependencies.quarto-error-reporting]
path = "./crates/quarto-error-reporting"

[workspace.dependencies.quarto-source-map]
path = "./crates/quarto-source-map"

[workspace.dependencies.quarto-xml]
path = "./crates/quarto-xml"

[workspace.dependencies.quarto-doctemplate]
path = "./crates/quarto-doctemplate"

[workspace.dependencies.quarto-treesitter-ast]
path = "./crates/quarto-treesitter-ast"

[workspace.dependencies.quarto-pandoc-types]
path = "./crates/quarto-pandoc-types"

[workspace.dependencies.quarto-ast-reconcile]
path = "./crates/quarto-ast-reconcile"

[workspace.dependencies.quarto-config]
path = "./crates/quarto-config"

[workspace.dependencies.quarto-system-runtime]
path = "./crates/quarto-system-runtime"

[workspace.dependencies.quarto-project-create]
path = "./crates/quarto-project-create"

[workspace.lints.clippy]
# Architectural issues - fixing these requires significant refactoring
large_enum_variant = "allow"  # Would require boxing large enum variants
result_large_err = "allow"    # Would require boxing all error types
too_many_arguments = "allow"  # Some functions legitimately need many parameters
fn_params_excessive_bools = "allow"  # Related to too_many_arguments
wrong_self_convention = "allow"  # as_inline(self) intentionally consumes self
type_complexity = "allow"  # Complex types are sometimes clearer inline
inherent_to_string = "allow"  # OutputBuilder::to_string is intentional naming
ptr_arg = "allow"  # &Vec vs &[_] requires API changes
only_used_in_recursion = "allow"  # Not a problem
arc_with_non_send_sync = "allow"  # May be intentional for single-threaded use
large_stack_arrays = "allow"  # May be intentional for performance
enum_variant_names = "allow"  # Stylistic preference
items_after_test_module = "allow"  # Module organization preference
result_unit_err = "allow"  # API design choice
assertions_on_constants = "allow"  # Used for test documentation
doc_lazy_continuation = "allow"  # Doc formatting preference
doc_overindented_list_items = "allow"  # Doc formatting preference
match_like_matches_macro = "allow"  # Sometimes match is clearer
suspicious_doc_comments = "allow"  # False positives
needless_else = "allow"  # Sometimes improves readability
if_same_then_else = "allow"  # May be intentional for clarity
assigning_clones = "allow"  # Requires many changes for marginal benefit
cloned_ref_to_slice_refs = "allow"  # Minor optimization
manual_strip = "allow"  # Sometimes clearer than strip_prefix
needless_range_loop = "allow"  # Sometimes index access is intentional
const_is_empty = "allow"  # False positive in tests
needless_for_each = "allow"  # Style preference

# Keep these as warnings
cfg_not_test = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_not_returning_iterator = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_is_variant_and = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "allow"  # Sometimes continue is clearer for control flow
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_lit_chars_any = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"

# Profiles must be set at the workspace level
[profile.dev]
# Tell `rustc` to optimize for small code size to
# work around "too many locals" error from wasm-pack
# https://github.com/wasm-bindgen/wasm-bindgen/issues/3451#issuecomment-1562982835
opt-level = "s"
