[package]
name = "comrak-to-pandoc"
description = "Convert comrak CommonMark AST to Pandoc AST"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comrak = { version = "0.50.0", default-features = false }
quarto-pandoc-types = { workspace = true }
quarto-source-map = { workspace = true }
hashlink = { version = "0.11.0", features = ["serde_impl"] }

[dev-dependencies]
pampa = { workspace = true }
insta = { workspace = true }
proptest = "1.10"

[lints]
workspace = true
