[package]
name = "quarto-ast-reconcile"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Three-phase AST reconciliation for preserving source locations"

[dependencies]
quarto-pandoc-types = { path = "../quarto-pandoc-types" }
quarto-source-map = { path = "../quarto-source-map" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hashlink = { version = "0.11.0", features = ["serde_impl"] }
rustc-hash = "2.1"

[dev-dependencies]
proptest = "1.10"

[lints]
workspace = true
