[package]
name = "quarto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core rendering infrastructure for Quarto"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
which = "7.0"
hashlink = "0.10"

quarto-util.workspace = true
quarto-pandoc-types.workspace = true
quarto-source-map.workspace = true
quarto-doctemplate.workspace = true

[lints]
workspace = true
