[package]
name = "quarto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core rendering infrastructure for Quarto"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
hashlink = "0.10"

quarto-util.workspace = true
quarto-system-runtime.workspace = true
quarto-pandoc-types.workspace = true
quarto-source-map.workspace = true
quarto-doctemplate.workspace = true
quarto-error-reporting.workspace = true
quarto-config.workspace = true
pampa.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
