[package]
name = "quarto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core rendering infrastructure for Quarto"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
pollster.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
hashlink = "0.11"

quarto-util.workspace = true
quarto-system-runtime.workspace = true
quarto-pandoc-types.workspace = true
quarto-source-map.workspace = true
quarto-doctemplate.workspace = true
quarto-error-reporting.workspace = true
quarto-config.workspace = true
quarto-ast-reconcile.workspace = true
quarto-analysis.workspace = true
pampa.workspace = true

# Native-only dependencies (for execution engines and resource extraction)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3"
include_dir = "0.7"
which = "8"
regex = "1.12"
quarto-sass.workspace = true

# Jupyter engine dependencies (native only)
runtimelib = { version = "1.0", features = ["tokio-runtime"] }
jupyter-protocol = "1.0"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "process", "fs", "net", "io-util"] }
uuid.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
