[package]
name = "quarto-error-reporting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Error reporting and diagnostic messages for Quarto"

[dependencies]
# Source location tracking
quarto-source-map = { path = "../quarto-source-map" }

# Error reporting
ariadne = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# URL handling for file:// hyperlinks
url = "2.5"

[dev-dependencies]
# No dev dependencies yet

[lints]
workspace = true
