[package]
name = "quarto-markdown-pandoc"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-qmd = { workspace = true }
quarto-error-reporting = { path = "../quarto-error-reporting" }
quarto-source-map = { path = "../quarto-source-map" }
quarto-yaml = { path = "../quarto-yaml" }
regex = { version = "1.10.0", features = ["unicode"] }
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
paste = "1.0.15"
once_cell = "1.21.3"
yaml-rust2 = { workspace = true }
hashlink = { version = "0.10.0", features = ["serde_impl"] }
error-message-macros = { path = "./error-message-macros" }
ariadne = "0.4"

[dev-dependencies]
insta = { version = "1.40", features = ["json", "redactions"] }

[lints]
workspace = true
