[package]
name = "quarto-pandoc-types"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Pandoc AST type definitions for Quarto"

[dependencies]
quarto-source-map = { path = "../quarto-source-map" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hashlink = { version = "0.10.0", features = ["serde_impl"] }
yaml-rust2 = { workspace = true }
indexmap = "2.13"

[lints]
workspace = true
