[package]
name = "quarto-parse-errors"
version = "0.1.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quarto-error-reporting = { path = "../quarto-error-reporting" }
quarto-source-map = { path = "../quarto-source-map" }
tree-sitter = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
quarto-error-message-macros = { path = "./error-message-macros" }

[lints]
workspace = true
