[package]
name = "quarto-sass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SASS compilation infrastructure for Quarto"

[dependencies]
serde.workspace = true
thiserror.workspace = true
regex.workspace = true
once_cell.workspace = true
include_dir.workspace = true
# Runtime abstraction for cross-platform file access (WASM + native)
quarto-system-runtime.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
grass.workspace = true

[lints]
workspace = true
