[package]
name = "quarto-system-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime abstraction layer for Quarto system operations"

[dependencies]
# Async methods in traits
async-trait.workspace = true
# JSON serialization for JS interop
serde_json.workspace = true

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# For binary lookup on PATH
which = "7.0"

[dev-dependencies]
tempfile = "3.10"
pollster = "0.4"

[lints]
workspace = true
