[package]
name = "quarto-system-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime abstraction layer for Quarto system operations"

[dependencies]
# Async methods in traits
async-trait.workspace = true
# JSON serialization for JS interop
serde_json.workspace = true

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# For binary lookup on PATH
which = "7.0"
# SASS compilation (pure Rust, ~2x faster than dart-sass)
grass.workspace = true

# JavaScript runtime (for EJS template rendering)
# Note: These types MUST NOT leak into the public trait API
deno_core.workspace = true
# deno_web and deno_webidl have yanked dependencies, using minimal setup for now
# deno_web.workspace = true
# deno_webidl.workspace = true
serde_v8.workspace = true
tokio.workspace = true

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# JavaScript interop for browser JS calls
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
tempfile = "3.24"
pollster = "0.4"

[lints]
workspace = true
