[package]
name = "quarto-yaml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
yaml-rust2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
quarto-source-map = { path = "../quarto-source-map" }

[dev-dependencies]
regex = "1"

[[bench]]
name = "memory_overhead"
harness = false

[[bench]]
name = "scaling_overhead"
harness = false

[lints]
workspace = true
