[package]
name = "quarto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Quarto command-line interface (Development Build)"

[[bin]]
name = "quarto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

quarto-core.workspace = true
quarto-util.workspace = true

[build-dependencies]

