[package]
name = "quarto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Quarto command-line interface (Development Build)"

[[bin]]
name = "quarto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
pollster.workspace = true

quarto-core.workspace = true
quarto-util.workspace = true
quarto-system-runtime.workspace = true
quarto-doctemplate.workspace = true

[build-dependencies]

[dev-dependencies]
tempfile = "3"
pampa.workspace = true

[lints]
workspace = true

